chore: save work before pull rebase

--- a/_config.yml
+++ b/_config.yml
@@ -1,93 +1,55 @@
-# The Site Configuration
-
-# Import the theme
 theme: jekyll-theme-chirpy
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
 
-# Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: Australia/Adelaide
 
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
+title: Whonix Blog
 
-title: Chirpy # the main title
+tagline: By a homelab enthusiast ~ For homelab enthusiasts
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+description: >-
+  A tech-focused blog exploring homelabs, self-hosting, Linux, automation, and 
+  open-source solutions. Learn practical setups, guides, and experiments from 
+  real-world projects, written with simplicity and detail in mind.
 
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+url: "https://blog.whonix.net"
 
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+favicon: "/assets/img/favicons/whonix.png"
 
 github:
-  username: github_username # change to your GitHub username
+  username: whonixnetworks # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: whonix # change to your Twitter username
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: greedybomber
+  email: greedybomber@whonix.net # change to your email address
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    #- https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/whonixnetworks
+    - https://www.facebook.com/share/1AQSrUERmy
+    #- https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: X3RaaiETTJ4OyrgloSvEGvMqi8-bD_Za9f1xNA0WOVA
   bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
   facebook: # fill in your Facebook verification code
 
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
-
-# Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-WK7SWZ54VY
   goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
+    id: greedybomber
+    domain: "blog.whonix.net"
   cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+    id: 8eb84c675a18466f85abd6f7727de6d2
 
-# Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light — Use the light color scheme
-#     dark — Use the dark color scheme
-#
 theme_mode: # [light | dark]
 
 # The CDN endpoint for media resources.
@@ -98,7 +60,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/avatar/greedy.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
